# 02_December_B

./: README.md  pyproject.toml
account/: models.py  serializers.py  urls.py  views.py
batch/management/commands/: insert_asset.py  insert_company.py  update_investment.py
batch/utils/: read_xlsx.py
company/: models.py
config/: settings.py  urls.py
order/: models.py
portfolio/: models.py
transfer/: models.py  serializers.py  urls.py  utils.py  views.py
