[tool.poetry]
name = "december"
version = "0.1.0"
description = ""
authors = ["gyuchan <schk9611@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.2"
djangorestframework = "^3.14.0"
django-dotenv = "^1.4.2"
mysqlclient = "^2.1.1"
drf-yasg = "^1.21.4"
pandas = "^1.5.1"
xlrd = "^2.0.1"
openpyxl = "^3.0.10"
django-crontab = "^0.7.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
PyLink = "^0.3.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
